# LAB4TCP

ClientLab4/: CMakeLists.txt  main.cpp
ServerLab4/: CMakeLists.txt  main.cpp
